Bring back the old compound page. Tweaks in the new compound page Use bioJS reaction component locally in both compound pages Optimizations in the import tool
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1771 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-referencelayer/importer/src/test/resources/log4j.properties
+++ b/metabolights-referencelayer/importer/src/test/resources/log4j.properties
@@ -20,15 +20,8 @@
 #
 
 # Root logger option
-log4j.rootLogger=INFO
-#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-#log4j.appender.stdout.layout.ConversionPattern=%d %5p %-80m - %c:%L %n
+log4j.rootLogger=INFO, stdout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d %5p %-80m - %c:%L %n
 
-
-# ***** The Console Appender.
-log4j.appender.ConsoleApp=org.apache.log4j.ConsoleAppender
-log4j.appender.ConsoleApp.layout=org.apache.log4j.PatternLayout
-#log4j.appender.ConsoleApp.layout.ConversionPattern=%d [%-5p] (%t,%C{1},%L): %m%n
-log4j.appender.ConsoleApp.layout.ConversionPattern=%d [%x]: %m%n
-log4j.appender.ConsoleApp.threshold=ERROR
