--- a/metabolights-utils/metabolights-isatab-utils/pom.xml
+++ b/metabolights-utils/metabolights-isatab-utils/pom.xml
@@ -29,7 +29,8 @@
     <groupId>uk.ac.ebi.metabolights</groupId>
     <name>MetaboLights ISAtab Utilities</name>
     <description>MetaboLights ISAtab Utilities</description>
-    <version>1.1-SNAPSHOT</version>
+    <!--Migrated to slf4j + log4j-->
+    <version>1.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <parent>
