--- a/metabolights-referencelayer/importer/pom.xml
+++ b/metabolights-referencelayer/importer/pom.xml
@@ -19,34 +19,14 @@
   ~
   ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
   -->
-
-<!--
-  ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
-  ~ Cheminformatics and Metabolism group
-  ~
-  ~ European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
-  ~
-  ~ Last modified: 4/1/14 3:51 PM
-  ~ Modified by:   conesa
-  ~
-  ~
-  ~ ©, EMBL, European Bioinformatics Institute, 2014.
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~    http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
-  -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>importer</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.2-SNAPSHOT</version>
     <name>Reference layer importer</name>
+    <!--Migrated to slf4j + log4j-->
+    <description>Imports metabolites from Chebi and updates species information</description>
 
     <parent>
         <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
@@ -65,37 +45,39 @@
         <dependency>
             <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
             <artifactId>metabolights-referencelayer-dao</artifactId>
-            <version>0.91-SNAPSHOT</version>
+            <version>0.92-SNAPSHOT</version>
         </dependency>
-        <dependency>
-			<groupId>uk.ac.ebi.biobabel</groupId>
-			<artifactId>biobabel-db</artifactId>
-			<version>1.3.7</version>
-		</dependency>
         <dependency>
             <groupId>uk.ac.ebi.chebi.webapps.chebiWS.client</groupId>
             <artifactId>chebiWS-client</artifactId>
             <version>2.2.1</version>
         </dependency>
         <dependency>
-            <groupId>uk.ac.ebi.ols</groupId>
-            <artifactId>ols-client</artifactId>
-            <version>1.18</version>
-        </dependency>
-        <dependency>
             <groupId>uk.ac.ebi.rhea</groupId>
             <artifactId>rhea-ws-client</artifactId>
             <version>2.0.0</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>log4j</artifactId>
+                    <groupId>log4j</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.mdk</groupId>
             <artifactId>mdk-service-soap</artifactId>
             <version>1.4.1</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>log4j</artifactId>
+                    <groupId>log4j</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
             <artifactId>species-core</artifactId>
-            <version>0.2-SNAPSHOT</version>
+            <version>0.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
