--- a/metabolights-referencelayer/dao/pom.xml
+++ b/metabolights-referencelayer/dao/pom.xml
@@ -27,8 +27,10 @@
 
     <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
     <artifactId>metabolights-referencelayer-dao</artifactId>
-    <version>0.91-SNAPSHOT</version>
+    <version>0.92-SNAPSHOT</version>
     <name>MetaboLights Reference layer Data Access Object</name>
+    <!--Migrated to slf4j + log4j-->
+    <description>Reference layer Data Access Object</description>
 
     <parent>
         <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
@@ -46,11 +48,18 @@
 			<groupId>uk.ac.ebi.biobabel</groupId>
 			<artifactId>biobabel-db</artifactId>
 			<version>1.3.7</version>
-		</dependency>
+            <exclusions>
+                <exclusion>
+                    <artifactId>log4j</artifactId>
+                    <groupId>log4j</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <dependency>
             <groupId>oracle</groupId>
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0.2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.googlecode.lambdaj</groupId>
