--- a/metabolights-ws-client/pom.xml
+++ b/metabolights-ws-client/pom.xml
@@ -28,8 +28,9 @@
     <artifactId>metabolights-ws-client</artifactId>
     <groupId>uk.ac.ebi.metabolights</groupId>
     <name>MetaboLights webservice client</name>
+    <!--Migrated to slf4j + log4j-->
     <description>MetaboLights WebService Client</description>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.3-SNAPSHOT</version>
 
     <parent>
         <artifactId>metabolights-main</artifactId>
