Add name to the queue thread. IsaTab2Metabolights converter: If column not found return null.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1784 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/log4j.properties
+++ b/metabolights-webapps/src/main/resources/log4j.properties
@@ -57,10 +57,10 @@ log4j.additivity.default=false
 log4j.appender.FixedFileApp=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.FixedFileApp.layout=org.apache.log4j.PatternLayout
 log4j.appender.FixedFileApp.layout.ConversionPattern=%d {%x} [%-5p] file (%C{1},%L): %m%n
-log4j.appender.FixedFileApp.File=${catalina.base}/logs/metabolights-webapp.out
+log4j.appender.FixedFileApp.File=${catalina.base}/logs/metabolights-webapp.log
 log4j.appender.FixedFileApp.Append=false
 log4j.appender.FixedFileApp.BufferedIO=false
 log4j.appender.FixedFileApp.BufferSize=1024
 log4j.appender.FixedFileApp.threshold=ALL
-log4j.appender.FixedFileApp.DatePattern='.' yyyy-MM-dd
+log4j.appender.FixedFileApp.DatePattern='.'yyyy-MM-dd
 
