Adding a table structure to the Assays in the model and propagate the change along the whole layers: DAO, WS, WS-client. Webapp not yet done.
Change the Cell model fo expose the Field getter for JST to be able to use it.

Avoid endless loop with Jackson ignore annotations (ignoring iterators).

Some pom exclusions (oracle driver form Import layer, ols client 1.14, h2).

WS- use latest jackson versions, update packages.




git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1786 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -491,6 +491,18 @@
                     <artifactId>commons-dbcp</artifactId>
                     <groupId>commons-dbcp</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>ojdbc5</artifactId>
+                    <groupId>com.oracle</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>h2</artifactId>
+                    <groupId>com.h2database</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>ols-client</artifactId>
+                    <groupId>ols</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
@@ -603,7 +615,7 @@
         <dependency>
             <artifactId>metabolights-ws-client</artifactId>
             <groupId>uk.ac.ebi.metabolights</groupId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <artifactId>metabolights-isatab-utils</artifactId>
