--- a/metabolights-domain/pom.xml
+++ b/metabolights-domain/pom.xml
@@ -29,12 +29,20 @@
     <artifactId>metabolights-domain</artifactId>
     <name>MetaboLights Domain</name>
     <description>MetaboLights Domain module</description>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.1-SNAPSHOT</version>
 
     <parent>
         <artifactId>metabolights-main</artifactId>
         <groupId>uk.ac.ebi.metabolights</groupId>
         <version>1.4</version>
     </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
