--- a/metabolights-webapps/src/main/resources/log4j.properties
+++ b/metabolights-webapps/src/main/resources/log4j.properties
@@ -56,7 +56,7 @@ log4j.additivity.default=false
 # ***** The "Fixed" File Appender
 log4j.appender.FixedFileApp=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.FixedFileApp.layout=org.apache.log4j.PatternLayout
-log4j.appender.FixedFileApp.layout.ConversionPattern=%d {%x} [%-5p] file (%C{1},%L): %m%n
+log4j.appender.FixedFileApp.layout.ConversionPattern=%d {%x} [%-5p] (%C{1},%L): %m%n
 log4j.appender.FixedFileApp.File=${catalina.base}/logs/metabolights-webapp.log
 log4j.appender.FixedFileApp.Append=false
 log4j.appender.FixedFileApp.BufferedIO=false
