- Test resources for mzTab exporter - Reorganised email to on study upload - ols-client exclusion reversed - domain pom ref to 2.2-SNAPSHOT
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1790 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -4,17 +4,16 @@
   ~
   ~ European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
   ~
-  ~ Last modified: 2014-Oct-22
-  ~ Modified by:   conesa
+  ~ Last modified: 2014-Nov-12
+  ~ Modified by:   kenneth
   ~
-  ~
-  ~ Copyright 2014 EMBL-European Bioinformatics Institute.
+  ~ Copyright 2014 EMBL - European Bioinformatics Institute
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
   ~
-  ~    http://www.apache.org/licenses/LICENSE-2.0
+  ~      http://www.apache.org/licenses/LICENSE-2.0
   ~
   ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
   -->
@@ -499,10 +498,10 @@
                     <artifactId>h2</artifactId>
                     <groupId>com.h2database</groupId>
                 </exclusion>
-                <exclusion>
+                <!--exclusion>
                     <artifactId>ols-client</artifactId>
                     <groupId>ols</groupId>
-                </exclusion>
+                </exclusion-->
             </exclusions>
         </dependency>
         <dependency>
