--- a/metabolights-domain/pom.xml
+++ b/metabolights-domain/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>14.0</version>
+        </dependency>
     </dependencies>
 
 </project>
