--- a/metabolights-webservice/pom.xml
+++ b/metabolights-webservice/pom.xml
@@ -47,12 +47,17 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.4.0</version>
+            <version>2.4.3</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.4.0</version>
+            <version>2.4.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-guava</artifactId>
+            <version>2.4.3</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
