--- a/metabolights-webservice/src/main/webapp/WEB-INF/web.xml
+++ b/metabolights-webservice/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         id="WebApp_ID" version="2.5">
+         metadata-complete="true" id="MetaboLightsWS" version="2.5">
 
     <display-name>metabolights-webservice</display-name>
 
