--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -669,5 +669,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>15.0</version>
+        </dependency>
     </dependencies>
 </project>
