--- a/MetaboLights-Search/service-es/pom.xml
+++ b/MetaboLights-Search/service-es/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>elasticsearch</artifactId>
             <version>1.4.1</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <artifactId>metabolights-dao</artifactId>
+            <version>1.4-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
