Test elastic search index method, using gson. Study full serialization. Might need to reduce indexed entity
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1808 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
      <module>metabolights-webapps</module>
      <module>metabolights-species</module>
      <module>ISAcreator-shaded</module>
+     <module>metabolights-search</module>
   </modules>
 
   <build>
