--- a/MetaboLights-Search/service-es/pom.xml
+++ b/MetaboLights-Search/service-es/pom.xml
@@ -31,7 +31,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service-es</artifactId>
-    <name>MetaboLights Search Service - EL implementation</name>
+    <name>MetaboLights Search Service - ES</name>
     <description>Elastic search implementation for the search service</description>
 
     <dependencies>
@@ -55,6 +55,12 @@
             <groupId>uk.ac.ebi.metabolights</groupId>
             <artifactId>metabolights-dao</artifactId>
             <version>1.4-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.1</version>
         </dependency>
     </dependencies>
 
