Importer changes for test to work.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1813 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-referencelayer/importer/pom.xml
+++ b/metabolights-referencelayer/importer/pom.xml
@@ -84,6 +84,12 @@
             <artifactId>httpclient</artifactId>
             <version>4.3.5</version>
         </dependency>
+        <dependency>
+            <groupId>oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
