--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -30,7 +30,7 @@
     <name>MetaboLights DAO</name>
     <description>MetaboLights Data Access Objects module</description>
     <!--Migrated to slf4j + log4j-->
-    <version>1.4-SNAPSHOT</version>
+    <version>1.5-SNAPSHOT</version>
 
     <parent>
         <artifactId>metabolights-main</artifactId>
@@ -40,9 +40,19 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.3.8.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-annotations</artifactId>
+            <version>3.5.6-Final</version>
+        </dependency>
+        <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
             <artifactId>ISAcreator-shaded</artifactId>
-            <version>1.7.7</version>
+            <version>1.7.8</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.isatools</groupId>
