Test DDL/Schema creation. Test StudyHybridDAO with security, including getting a study by the obfuscation code.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1828 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-dao/src/test/resources/hibernate.properties
+++ b/metabolights-dao/src/test/resources/hibernate.properties
@@ -2,7 +2,7 @@
 hibernate.connection.username=reader
 hibernate.connection.password=reader
 hibernate.connection.driver_class=org.postgresql.Driver
-hibernate.connection.url=jdbc:postgresql://localhost/metabolights
+hibernate.connection.url=jdbc:postgresql://localhost/metabolightsempty
 
 # To move to code configuration.
 hibernate.id.new_generator_mappings=true
@@ -19,7 +19,7 @@ hibernate.id.new_generator_mappings=true
 #jdbc.format_sql=false
 #
 ## Change this to get some good debug info for Hibernate
-hibernate.show_sql=true
+#hibernate.show_sql=true
 #hibernate.format_sql=false
 #hibernate.use_sql_comments=false
 #
@@ -35,6 +35,6 @@ hibernate.show_sql=true
 #
 ## This shouldn't need to be changed
 #hibernate.search.default.directory_provider=org.hibernate.search.store.FSDirectoryProvider
-##hibernate.hbm2ddl.auto=update
+#hibernate.hbm2ddl.auto=create
 #hibernate.search.indexing_strategy=manual
 #hibernate.mapping.precedence=hbm,class
