Use new DAO in the index service.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1829 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/MetaboLights-Search/service-es/pom.xml
+++ b/MetaboLights-Search/service-es/pom.xml
@@ -54,13 +54,19 @@
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
             <artifactId>metabolights-dao</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.5-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.3-1102-jdbc41</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
