Add getList on studies to DAO, secure and tests Change default cluster name in elastic search service. Add releasedate to StudyData to be persisted. Test default releasedate value.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1833 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -92,6 +92,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.dbunit</groupId>
             <artifactId>dbunit</artifactId>
             <version>2.5.1-SNAPSHOT</version>
