--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -103,6 +103,11 @@
             <version>2.5.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-catalina</artifactId>
+            <version>8.0.18</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
